# event-processing-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  event_benchmark.js  infra-docker-compose.yml  pyproject.toml
infra/clickhouse/: create_events_table.sql
infra/kafka/: kafka_jaas.conf
infra/keycloak/: realm-export.json
src/: asgi_app.py  mq_app.py
src/application/: exceptions.py
src/application/dto/: analytics.py  auth.py  event.py
src/application/interfaces/: event_publisher.py  event_repository.py  token_verifier.py
src/application/services/: event_processing.py
src/application/use_cases/: accept_event.py  get_event_count_by_source.py  get_event_count_by_type.py  process_event.py
src/domain/entities/: event.py
src/domain/enums/: event_category.py  event_status.py
src/domain/services/: event_category_resolver.py
src/infrastructure/auth/: jwks_client.py  keycloak_token_verifier.py
src/infrastructure/config/: app.py  clickhouse.py  kafka.py  keycloak.py
src/infrastructure/di/: container.py  providers.py
src/infrastructure/mq/: consumers.py  provider.py  publisher.py  schemas.py
src/infrastructure/olap/: client.py  repository.py
src/presentation/api/: dependencies.py
src/presentation/api/routes/: analytics.py  events.py  v1.py
src/presentation/api/schemas/: analytics.py  event.py
