[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-processing-service"
version = "0.1.0"
description = "Event processing service with FastAPI, FastStream, Kafka and ClickHouse"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "faststream[cli,kafka]>=0.6.7",
    "clickhouse-connect>=0.15.1",
    "dishka>=1.10.1",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "T20", # flake8-print
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLR0913", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true
exclude = [".git", ".mypy_cache", ".pytest_cache", ".venv", "venv", "build", "dist"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*", "clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
]

